# Go2_Navigation

./: .gitignore  LICENSE  README.md  policy2.pt  unitree_lab_policy.pt
livox_filter_projector/: CMakeLists.txt  package.xml
livox_filter_projector/launch/: livox_filter.launch
livox_filter_projector/src/: livox_filter_projector.cpp
logs/rsl_rl/unitree_go2_navigation_mlp/2025-12-09_09-19-38/: events.out.tfevents.1765243183.wu.279509.0
logs/rsl_rl/unitree_go2_navigation_mlp/2025-12-09_09-42-01/: events.out.tfevents.1765244525.wu.284065.0
logs/rsl_rl/unitree_go2_navigation_mlp/2025-12-09_10-04-08/: events.out.tfevents.1765245853.wu.289551.0
logs/rsl_rl/unitree_go2_navigation_mlp/2025-12-09_10-10-33/: events.out.tfevents.1765246239.wu.291800.0
motion_checkpoint/: policy.pt
outputs/2025-12-08/21-33-23/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-08/21-43-12/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-08/22-00-04/.hydra/: hydra.yaml
outputs/2025-12-08/22-13-16/.hydra/: hydra.yaml
outputs/2025-12-08/22-36-00/.hydra/: hydra.yaml
outputs/2025-12-08/22-45-45/.hydra/: hydra.yaml
outputs/2025-12-08/22-55-45/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-09/08-58-33/.hydra/: hydra.yaml
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: play.py  play_mlp_nav.py  train.py  train_mlp_nav.py
source/Go2_Navigation/: setup.py
source/Go2_Navigation/Go2_Navigation/: ui_extension_example.py
source/Go2_Navigation/Go2_Navigation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/Go2_Navigation/config/: extension.toml
(+23 files in other folders)
